# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: projectci.yml
task_manager/: models.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_data.json  users.json
task_manager/labels/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py
task_manager/tasks/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_alter_task_executor.py  0003_alter_task_executor.py  0004_alter_task_executor.py  0005_alter_task_status.py  0006_tasklabels_task_labels_tasklabels_task.py  0007_alter_task_labels.py  0008_alter_tasklabels_task.py
task_manager/templates/: index.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/layouts/: application.html  form.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  tasks.html  update.html
task_manager/templates/users/: create.html  delete.html  login.html  update.html  users.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
(+2 files in other folders)
