[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A task manager web-application"
authors = ["Vova <bkj@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
