[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A task manager web-application"
authors = ["Vova <bkj@ya.ru>"]
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
